﻿Subtitle Edit Changelog

3.5.10 (xth April 2019) BETA
* NEW:
   * 
* IMPROVED:
   * Auto rename after translate via plugin - thx Sopor
   * Allow dash in number for WebVTT files - thx Maksim
   * Make export font name dropdown wider - thx Eduard
* FIXED:
   * Fix for "Split long lines" with html tags - thx moob
   * Fix minor issue with quotes in reverse RTL - thx OmrSi
   * Fix shortcut searching with "&" character - thx Leon
   * Remove "gotta" to "got to" from English OCR fix replace list
   * Fix name/abbreviation check in OCR fix engine - thx teodargent
   * Make "column->delete text" work in translator mode - thx darnn
   * Fix focus issue in "Fix common errors" - thx OmrSi/Ding-adong
   * SRT: Allow spaces before/after time codes - thx SirEllert


3.5.9 (10th February 2019)
* NEW:
   * Bookmarks - thx OmrSi/marb99
   * Auto save option
   * Spell check - keep "Use always" replace list option
   * Image export - option to have single lines top justified - thx joedmartin
   * Add shortcut: Modify selection
   * Add format "OGM chapters" - thx Franc
   * Add format "sptx" (read) - thx Peter
   * Add Norwegian name list - thx SvenErik
* IMPROVED:
   * Update Hungarian translation - thx Zityi
   * Update Korean translation - thx domddol
   * Update Portuguese translation - thx moob
   * Update French translation - thx JM GBT
   * Update Polish translation - thx admas
   * Update a few wrong translations (Spanish) - thx Ovidio
   * Create/adjust/translate shortcuts now global - thx OmrSi/uckthis
   * Auto break adheres to "Max number of lines" setting
   * Translate selected lines for MS translator + plugins
   * Make "select current sub while playing" smoother in waveform
   * Support .rtf files in "Import plain text" - thx Tilen
   * Improve Binary OCR of comma / apostrophe - thx Tuukka
   * Improve quote/italic detection in binary OCR - thx Miggu
   * Add context menu to OCR spell check
   * Improve DVD Studio Pro tag reading - thx Shas2509